@@ -1,3 +1,9 @@
+2011-09-24 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sim/ucsim/globals.cc,
+	  sim/ucsim/z80.src/inst_ed.cc:
+	  Report mlt instructions as invalid in simulator when running in Z80 mode.
+
 2011-09-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCglue.c,
